# Vibe_arch

./: .env.example  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: routes.py
backend/app/models/: architecture.py  ast.py  repo.py
backend/app/services/: ast_extractor.py  extraction_pipeline.py  fetcher.py  llm_interpreter.py  regex_extractor.py  validator.py
backend/tests/: test_api.py  test_ast_extractor.py  test_fetcher.py  test_llm_interpreter.py
docs/plans/: 2026-06-26-001-feat-vibe-arch-oss-comparison-plan.md
docs/research/: vibe-arch-feasibility-report.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ArchitectureCanvas.tsx
frontend/src/components/edges/: ConfidenceEdge.tsx
frontend/src/components/nodes/: CLINode.tsx  QueueNode.tsx  ServiceNode.tsx  StorageNode.tsx
frontend/src/hooks/: useArchitecture.ts
frontend/src/pages/: ComparisonPage.tsx  LandingPage.tsx
frontend/src/types/: architecture.ts
