[project]
name = "vibe-arch"
version = "0.1.0"
description = "Stop vibe-coding. Build your architecture yourself with real open-source patterns as the standard of truth."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "abrehamteshale" }]

dependencies = [
    "fastapi>=0.116",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "typer>=0.12",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.scripts]
vibe-arch = "cli.vibe_arch:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend", "cli"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
