[project]
name = "vibe-arch"
version = "0.1.0"
description = "Stop vibe-coding. Build your architecture yourself with real open-source patterns as the standard of truth."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "abrehamteshale" }]

dependencies = [
    "fastapi>=0.116",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "typer>=0.12",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    "tree-sitter>=0.23",
    "anthropic>=0.50",
    "openai>=1.55",
    "zhipuai>=2.1",
    "sse-starlette>=2.1",
    "tree-sitter-python>=0.25.0",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-typescript>=0.23.2",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-rust>=0.24.2",
    "tree-sitter-java>=0.23.5",
    "tree-sitter-ruby>=0.23.1",
    "tree-sitter-php>=0.24.1",
    "tree-sitter-c>=0.24.2",
    "tree-sitter-cpp>=0.23.4",
    "tree-sitter-c-sharp>=0.23.5",
    "tree-sitter-swift>=0.7.3",
    "tree-sitter-kotlin>=1.1.0",
    "tree-sitter-scala>=0.26.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
